--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-nodeunit": "~0.2.1",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-nodeunit": "~0.2.1"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
@@ -35,6 +34,6 @@
     "batman",
     "template",
     "templates",
-    "precompile",
+    "precompile"
   ]
 }
